--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,9 @@ set-window-option -g window-status-current-style fg=colour39
 set -g status-left-length 55
 #set -g status-right ''
 #set -g status-right-length 0
-set -g status-left "#[fg=green]#H #[fg=black] #[fg=green,bright]#(uname -r)#[default]"
+
+set -g status-left "#[fg=green]#H #[fg=black]#[default]"
+# set -g status-left "#[fg=green]#H #[fg=black] #[fg=green,bright]#(uname -r)#[default]"
 #set -g status-left "#[fg=green][ #H ][ #{pane_title} ]"
 
 # Display a clock on the bottom right of the status bar.
